(fix): Remove double border around empty state tile
This removes a double border around the Active Visits widget empty state tile.

It also commits some orphaned translation keys and strings that should have been part of https://github.com/openmrs/openmrs-esm-patient-management/pull/108.

--- a/packages/esm-active-visits-app/src/active-visits-widget/active-visits.scss
+++ b/packages/esm-active-visits-app/src/active-visits-widget/active-visits.scss
@@ -2,7 +2,7 @@
 
 .activeVisitsContainer {
   background-color: $ui-background;
-  border: 1px solid #e0e0e0;
+  border: 1px solid $ui-03;
   width: 100%;
   margin: 0 auto;
   max-width: 95vw;
@@ -100,5 +100,4 @@
 
 .tile {
   text-align: center;
-  border: 1px solid $ui-03;
 }
